--- a/style.css
+++ b/style.css
@@ -1,37 +1,18 @@
-/* Reset Básico */
-body { margin: 0; padding: 0; background: #D9D9D9; overflow-x: auto; }
-
-.figma-container {
-    width: 1920px;
-    height: 5287px;
-    position: relative;
-    margin: 0 auto;
-    background: #D9D9D9;
+.box {
+  width: 1920px;
+  height: 226px;
 }
 
-/* --- CAMADAS DE CONFETES --- */
-.confetti-1, .confetti-2, .confetti-3, .confetti-4 {
-    position: absolute; background: url(confetti13.png); opacity: 0.12; pointer-events: none;
+.box .rectangle {
+  position: fixed;
+  top: -111px;
+  left: -227px;
+  width: 1920px;
+  height: 226px;
+  background-color: #0033a0;
+  border-radius: 70px 70px 0px 0px;
 }
-.confetti-1 { width: 1780px; height: 1800px; top: 0; left: 70px; }
-.confetti-2 { width: 1724px; height: 1248px; top: 1200px; left: 100px; }
-.confetti-3 { width: 677px; height: 1717px; top: 2400px; left: 0px; }
-.confetti-4 { width: 614px; height: 1120px; top: 4100px; left: 1300px; }
 
-/* --- HEADER (Rectangle 2 + Logo) --- */
-.rectangle-2 {
-    position: absolute; width: 1920px; height: 226px;
-    background: #0033A0; border-radius: 70px 70px 0px 0px; top: 0; left: 0;
-}
-.logo-horizontal {
-    position: absolute; width: 359px; height: 95px;
-    background: url(LOGO_HORIZONTAL_BEIGE.png); top: 65px; left: 150px;
-}
-.newsletter-title {
-    position: absolute; width: 830px; height: 262px;
-    font-family: 'Poppins'; font-weight: 400; font-size: 48px; color: #FFFFFF;
-    top: 75px; left: 550px;
-}
 
 /* --- TEXTOS INTRODUTÓRIOS --- */
 .intro-text-lê {
